# avionics-tests

./: .gitignore  CMakeLists.txt  build_redist  pack.sh  readme.md
SDK/CHeaders/XPLM/: XPLMDefs.h  XPLMDisplay.h  XPLMGraphics.h  XPLMNavigation.h  XPLMWeather.h
SDK/Delphi/XPLM/: XPLMDefs.pas  XPLMDisplay.pas  XPLMNavigation.pas  XPLMWeather.pas
SDK/Libraries/Mac/XPLM.framework/: XPLM
SDK/Libraries/Mac/XPLM.framework/Versions/C/: XPLM
SDK/Libraries/Mac/XPWidgets.framework/: XPWidgets
SDK/Libraries/Mac/XPWidgets.framework/Versions/C/: XPWidgets
SDK/Libraries/Win/: XPLM_64.lib
cmake/: xplm.cmake
src/: SystemGL.h  custom_device.c  plugin.c  stock_override.c
